--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -602,9 +602,11 @@ a {
     }
 }
 
+/************************************************** SECTION-14 ********************************************************/
+
 .section-14 {
     div {
-        min-height: 10rem;
+        height: auto;
     }
     ul {
         li {
@@ -626,27 +628,35 @@ a {
 
     .div1 {
         grid-area: 1 / 1 / 3 / 3;
+        height: 16rem;
     }
     .div2 {
         grid-area: 1 / 3 / 3 / 5;
+        height: 16rem;
     }
     .div3 {
         grid-area: 3 / 1 / 5 / 3;
+        height: 16rem;
     }
     .div4 {
         grid-area: 3 / 3 / 5 / 5;
+        height: 16rem;
     }
     .div5 {
         grid-area: 5 / 1 / 7 / 3;
+        height: 16rem;
     }
     .div6 {
         grid-area: 5 / 3 / 7 / 5;
+        height: 16rem;
     }
     .div7 {
         grid-area: 7 / 1 / 9 / 3;
+        height: 16rem;
     }
     .div8 {
         grid-area: 7 / 3 / 9 / 5;
+        height: 16rem;
     }
     .div9 {
         grid-area: 1 / 5 / 9 / 7;
@@ -691,7 +701,7 @@ a {
         color: $buttonHoverGreen !important;
     }
 }
-.pointer{
+.pointer {
     cursor: pointer;
 }
 .fab,
@@ -1035,6 +1045,53 @@ p {
         display: none;
     }
 
+    .section-14 {
+        .parent {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(7, 1fr);
+            grid-column-gap: 5px;
+            grid-row-gap: 5px;
+        }
+
+        .div1 {
+            grid-area: 1 / 1 / 2 / 2;
+            height: 10rem;
+        }
+        .div2 {
+            grid-area: 1 / 2 / 2 / 3;
+            height: 10rem;
+        }
+        .div3 {
+            grid-area: 2 / 1 / 3 / 2;
+            height: 10rem;
+        }
+        .div4 {
+            grid-area: 2 / 2 / 3 / 3;
+            height: 10rem;
+        }
+        .div5 {
+            grid-area: 3 / 1 / 4 / 2;
+            height: 10rem;
+            
+        }
+        .div6 {
+            grid-area: 3 / 2 / 4 / 3;
+            height: 10rem;
+        }
+        .div7 {
+            grid-area: 4 / 1 / 5 / 2;
+            height: 10rem;
+        }
+        .div8 {
+            grid-area: 4 / 2 / 5 / 3;
+            height: 10rem;
+        }
+        .div9 {
+            grid-area: 1 / 3 / 5 / 4;
+        }
+    }
+
     .toggleBtn {
         display: block !important;
         padding: 5px 5px;
@@ -1258,6 +1315,11 @@ p {
     }
     .category-btn {
         justify-content: center;
+    }
+    .section-14{
+        div{
+            margin-bottom: 2rem;
+        }
     }
 }
 @media screen and (max-width: 1124px) {
