--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,6 +214,27 @@ a.button::after {
 }
 
 /*************************padding and margin and other common styles*****************************/
+.green-hover:hover {
+  background-color: #078335 !important;
+}
+
+.green-text-hover:hover {
+  color: #078335 !important;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.uppercase {
+  text-transform: uppercase;
+  font-style: normal !important;
+}
+
+.bold {
+  font-weight: bold !important;
+}
+
 .hr {
   width: 88%;
 }
@@ -229,90 +250,6 @@ a.button::after {
   margin-top: 0;
   margin-bottom: 1rem;
   color: #00af3f !important;
-}
-
-.overlay-white {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, 0)), color-stop(50%, rgba(255, 255, 255, 0)), to(white));
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 50%, white 100%);
-  display: block;
-  background-size: cover;
-  height: 75%;
-  width: 100%;
-  content: "";
-  bottom: -3px;
-}
-
-.carousel {
-  overflow: hidden;
-  height: 5rem;
-}
-
-.green-hover:hover {
-  background-color: #078335 !important;
-}
-
-.green-text-hover:hover {
-  color: #078335 !important;
-}
-
-.pointer {
-  cursor: pointer;
-}
-
-.fab:hover,
-.far:hover {
-  -webkit-transition: color 0.25s ease-out;
-  transition: color 0.25s ease-out;
-  color: #00af3f !important;
-}
-
-.fa-twitter {
-  margin-right: 50% !important;
-}
-
-.flex-wrap {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.flex-nowrap {
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-}
-
-.flex-row-1 {
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  width: 50%;
-}
-
-.label {
-  display: inline-block !important;
-  padding: 0.4rem 0.5rem !important;
-  border-radius: 0 !important;
-  font-size: 1rem !important;
-  line-height: 1 !important;
-  white-space: nowrap !important;
-  cursor: default !important;
-  background: #0033a0 !important;
-  color: #fff !important;
-}
-
-.uppercase {
-  text-transform: uppercase;
-  font-style: normal !important;
-}
-
-.bold {
-  font-weight: bold !important;
 }
 
 .mb-half {
@@ -333,6 +270,30 @@ a.button::after {
 
 .mt-half {
   margin-top: 0.5rem;
+}
+
+.medium-p1 {
+  padding: 1rem !important;
+}
+
+.m-top-2 {
+  margin-top: 1rem;
+}
+
+.margin-l1 {
+  margin-left: 1%;
+}
+
+.margin-r1 {
+  margin-right: 1%;
+}
+
+.m-1 {
+  margin: 0.7rem;
+}
+
+.medium-absolute {
+  position: absolute !important;
 }
 
 .w-100 {
@@ -386,6 +347,11 @@ a.button::after {
   min-width: initial;
 }
 
+.no-pd {
+  padding: 0;
+  margin: 0;
+}
+
 .pd-1 {
   padding-top: 1rem !important;
   padding-bottom: 1rem !important;
@@ -427,6 +393,10 @@ a.button::after {
 
 .pd-xs {
   padding: 0.5%;
+}
+
+p {
+  font-size: calc(13.6px + 0.625vw) !important;
 }
 
 .wd-100 {
@@ -510,11 +480,6 @@ a.button::after {
   display: flex;
 }
 
-.no-pd {
-  padding: 0;
-  margin: 0;
-}
-
 .flex-dir-column {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -538,6 +503,30 @@ a.button::after {
 
 .z1 {
   z-index: 1;
+}
+
+.flex-wrap {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.flex-nowrap {
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.flex-row-1 {
+  height: auto;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 50%;
 }
 
 .text-normal {
@@ -597,32 +586,20 @@ a.button::after {
   border-bottom: 1px #ccc solid !important;
 }
 
-p {
-  font-size: calc(13.6px + 0.625vw) !important;
-}
-
-.medium-absolute {
-  position: absolute !important;
-}
-
-.medium-p1 {
-  padding: 1rem !important;
-}
-
-.m-top-2 {
-  margin-top: 1rem;
-}
-
-.margin-l1 {
-  margin-left: 1%;
-}
-
-.m-1 {
-  margin: 0.7rem;
-}
-
 .small {
   font-size: 0.75rem !important;
+}
+
+.label {
+  display: inline-block !important;
+  padding: 0.4rem 0.5rem !important;
+  border-radius: 0 !important;
+  font-size: 1rem !important;
+  line-height: 1 !important;
+  white-space: nowrap !important;
+  cursor: default !important;
+  background: #0033a0 !important;
+  color: #fff !important;
 }
 
 .btn-large {
@@ -650,6 +627,22 @@ p {
   cursor: pointer;
   margin-right: 2%;
   color: #999 !important;
+}
+
+.fab:hover,
+.far:hover {
+  -webkit-transition: color 0.25s ease-out;
+  transition: color 0.25s ease-out;
+  color: #00af3f !important;
+}
+
+.fa-twitter {
+  margin-right: 50% !important;
+}
+
+.carousel {
+  overflow: hidden;
+  height: 5rem;
 }
 
 .carousel-progress {
@@ -1053,7 +1046,7 @@ p {
             justify-content: center;
   }
   .section-14 div {
-    margin-bottom: 2rem;
+    margin-bottom: 3.6rem;
   }
 }
 
@@ -1104,6 +1097,77 @@ p {
   }
   .single-img-section-10 hr {
     width: 93% !important;
+  }
+}
+
+@media screen and (max-width: 692px) {
+  .section-14 div {
+    margin-bottom: 3.6rem;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  body .section-1,
+  body .section-2,
+  body .section-3,
+  body .section-4,
+  body .section-5,
+  body .section-6,
+  body .section-7,
+  body .section-8,
+  body .section-9,
+  body .section-10,
+  body .section-11,
+  body .section-12,
+  body .section-13,
+  body .section-14 {
+    margin-left: 0.3% !important;
+  }
+  .section-7 {
+    padding: 0 !important;
+  }
+  .section-7 .imgBox {
+    margin-left: 0 !important;
+  }
+}
+
+@media screen and (min-width: 620px) {
+  .section-14 .parent {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 0 !important;
+        grid-template-columns: 0 !important;
+    -ms-grid-rows: (1fr)[9] !important;
+        grid-template-rows: repeat(9, 1fr) !important;
+    grid-column-gap: 5px !important;
+    grid-row-gap: 5px !important;
+  }
+  .section-14 .parent .div1 {
+    grid-area: 0.25 !important;
+  }
+  .section-14 .parent .div2 {
+    grid-area: 0.33333 !important;
+  }
+  .section-14 .parent .div3 {
+    grid-area: 0.375 !important;
+  }
+  .section-14 .parent .div4 {
+    grid-area: 0.4 !important;
+  }
+  .section-14 .parent .div5 {
+    grid-area: 0.41667 !important;
+  }
+  .section-14 .parent .div6 {
+    grid-area: 0.42857 !important;
+  }
+  .section-14 .parent .div7 {
+    grid-area: 0.4375 !important;
+  }
+  .section-14 .parent .div8 {
+    grid-area: 0.44444 !important;
+  }
+  .section-14 .parent .div9 {
+    grid-area: 0.45 !important;
   }
 }
 
@@ -1368,10 +1432,15 @@ body i {
 }
 
 .section-11 .author-section .userImage {
-  font-size: 1.6rem;
-  padding: 1.5rem !important;
   border: 1px solid #999 !important;
-  border-radius: 54%;
+  border-radius: 50%;
+}
+
+.section-11 .author-section .userImage img {
+  width: inherit;
+  height: inherit;
+  background-position: center;
+  background-size: contain;
 }
 
 /************************************************** SECTION-12 ********************************************************/
