--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1432,15 +1432,12 @@ body i {
 }
 
 .section-11 .author-section .userImage {
+  padding: 1.5rem !important;
+  width: 1.9rem;
+  height: 1.9rem;
+  font-size: 1.9rem;
   border: 1px solid #999 !important;
   border-radius: 50%;
-}
-
-.section-11 .author-section .userImage img {
-  width: inherit;
-  height: inherit;
-  background-position: center;
-  background-size: contain;
 }
 
 /************************************************** SECTION-12 ********************************************************/
