--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -395,7 +395,7 @@
     }
 
     h6 {
-        font-size: calc(3.6px + 1.625vw) !important;
+        // font-size: calc(3.6px + 1.625vw) !important;
     }
     .parent {
         display: grid;
