--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -394,30 +394,20 @@
             margin-left: 0 !important;
         }
     }
-}
-
-@media screen and (min-width: 620px) {
-    .section-14{
-        .parent {
-            display: grid;
-            grid-template-columns:0!important;
-            grid-template-rows: repeat(9, 1fr)!important;
-            grid-column-gap: 5px!important;
-            grid-row-gap: 5px!important;
-            .div1 { grid-area: 1 / 1 / 2 / 2!important; }
-            .div2 { grid-area: 2 / 1 / 3 / 2!important; }
-            .div3 { grid-area: 3 / 1 / 4 / 2!important; }
-            .div4 { grid-area: 4 / 1 / 5 / 2!important; }
-            .div5 { grid-area: 5 / 1 / 6 / 2!important; }
-            .div6 { grid-area: 6 / 1 / 7 / 2!important; }
-            .div7 { grid-area: 7 / 1 / 8 / 2!important; }
-            .div8 { grid-area: 8 / 1 / 9 / 2!important; }
-            .div9 { grid-area: 9 / 1 / 10 / 2!important; }
-            }
-            
-            
+    .section-14 {
+        h6 {
+            font-size: calc(5.6px + 2.625vw) !important;
+        }
     }
 }
+@media screen and (min-width: 375px) {
+    .section-14 {
+        h6 {
+            font-size: calc(5.6px + 2.625vw) !important;
+        }
+    }
+}
+
 body {
     i {
         font-style: normal !important;
